--- a/Speech synthesis/index-START.html
+++ b/Speech synthesis/index-START.html
@@ -41,6 +41,7 @@
         voices = this.getVoices();
         console.log(voices);
         voicesDropdown.innerHTML = voices
+        .filter(voice => voice.lang.includes('en'))
         .map(voice => `<option value ="${voice.name}"> ${voice.name} (${voice.lang})</option>`).join('');
         
     }
